--- a/widgets/meter/meter.html
+++ b/widgets/meter/meter.html
@@ -1,6 +1,6 @@
 <h1 class="title" data-bind="title"></h1>
 
-<input class="meter" data-angleOffset=-125 data-angleArc=250 data-width=200 data-readOnly=true data-bind-value="value | bytesNumber" data-bind-data-min="min" data-bind-data-max="max">
+<input class="meter" data-angleOffset=-125 data-angleArc=250 data-width=200 data-readOnly=true data-bind-value="value" data-bind-data-min="min" data-bind-data-max="max">
 
 <p class="more-info" data-bind="moreinfo"></p>
 
